<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_note_menu"
        android:icon="@drawable/baseline_delete_outline_24"
        android:title="@string/delete"
        android:visible="false"
        app:iconTint="?android:textColorPrimary"
        app:showAsAction="always" />

</menu>