...
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:visibility="visible"
            app:viewModel="@{viewModel}" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_note_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="?attr/colorSurface"
...
