...
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/drawer_content_description"
                android:src="@drawable/ic_baseline_menu_24"
                android:visibility="@{viewModel.uiState.searchQuery.blank ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/search_query_edit_text"
                app:layout_constraintHorizontal_weight="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/search_query_edit_text"
...
                android:inputType="text"
                android:padding="12dp"
                android:text="@{viewModel.uiState.searchQuery}"
                android:textColorHint="?android:textColorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/clear_icon_image_view"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@id/drawer_icon_image_view"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/clear_icon_image_view"
...
